--- a/src/css/VideoCard.css
+++ b/src/css/VideoCard.css
@@ -1,22 +1,23 @@
-.videoCard{
-    margin-bottom: 40px;
-    width:270px;
-    margin-left:5px;
-    cursor:pointer;
+.videoCard {
+  margin-bottom: 40px;
+  width: 270px;
+  margin-left: 5px;
+  cursor: pointer;
 }
-
-.videoCard__thumbnail{
-    height:auto;
-    width:100%;
+.videoCard__thumbnail {
+  height: auto;
+  width: 100%;
 }
-.title{
-    font-size: 16px;
-    color:black !important;
-    padding-bottom: 5px;
+.title {
+  font-size: 16px;
+  color: black !important;
+  padding-bottom: 5px;
 }
-.videoCard__info{
-    color:#606060;
+.videoCard__info {
+  color: #606060;
 }
-.videoCard__avatar{
-    margin-right: 7px;
+.videoCard__avatar {
+  margin-right: 7px;
+  width: 2.4rem !important;
+  height: 2.4rem !important;
 }
